Custom 404 page for production

--- a/public/404.html
+++ b/public/404.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>404 - Pokemon LOL | The page you were looking for doesn't exist (404)</title>
+  <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+font-family: 'Press Start 2P', cursive;    margin: 0;
+    background-size: cover;
+    background-image: url("/assets/pokemon_404.jpg");
   }
 
   div.dialog {
@@ -34,7 +36,19 @@
   h1 {
     font-size: 100%;
     color: #730E15;
+    font-family: 'Press Start 2P', cursive;
     line-height: 1.5em;
+  }
+
+  .shit {
+    font-size: 100%;
+    color: #730E15;
+    font-family: 'Press Start 2P', cursive;
+    line-height: 1.5em;
+  }
+
+  a{
+    color: black;
   }
 
   div.dialog > p {
@@ -58,10 +72,12 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
+      <p class="shit">uh,oh</h1>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p><a href="/">Please click here to go back </a></p>
+    <p>#POKEMONLOL</p>
   </div>
 </body>
 </html>
