changes productin.rb file to config.assets.compile = true

--- a/public/422.html
+++ b/public/422.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>Pokemon LOL | The change you wanted was rejected (422)</title>
+    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  body {
-    background-color: #EFEFEF;
+ body {
+    background-color: rgb(30, 30, 30);
     color: #2E2F30;
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+font-family: 'Press Start 2P', cursive;    margin: 0;
+    background-size: cover;
+    background-image: url("/assets/pokemon_404.jpg");
   }
 
   div.dialog {
@@ -37,6 +40,11 @@
     line-height: 1.5em;
   }
 
+  a{
+    color: black;
+  }
+
+
   div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
@@ -62,6 +70,7 @@
       <p>Maybe you tried to change something you didn't have access to.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <p><a href="/">Please click here to go back></a></p>
   </div>
 </body>
 </html>
