--- a/public/500.html
+++ b/public/500.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title> pokemonLol |We're sorry, but something went wrong (500)</title>
+    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  body {
-    background-color: #EFEFEF;
+ body {
+    background-color: rgb(30, 30, 30);
     color: #2E2F30;
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+font-family: 'Press Start 2P', cursive;    margin: 0;
+    background-size: cover;
+    background-image: url("/assets/pokemon_404.jpg");
   }
 
   div.dialog {
@@ -51,6 +54,9 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+  a{
+    color: black;
+  }
   </style>
 </head>
 
@@ -61,6 +67,7 @@
       <h1>We're sorry, but something went wrong.</h1>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <p><a href="/"> Please click here to go back</a></p>
   </div>
 </body>
 </html>
